Fix navbar overlapping sections on anchor scroll

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,10 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
+section[id] {
+  scroll-margin-top: 80px;
+}
+
 body {
   font-family: var(--font-body);
   font-size: var(--text-base);
